--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 .grid-square {
+    font-size: 0;
     margin: 0;
-    height: 20px;
-    width: 20px;
-    background-color: salmon;
-    border: solid black 1px;
+    height: 2rem;
+    width: 2rem;
+    background-color: rgb(223, 239, 239);
+    
 }
 
-.grid-square:hover {
-    background-color: aqua;
+.active {
+    background-color: rgb(33, 34, 34);
 }
 
 .canvas {
     display: flex;
-    flex-wrap: wrap;
+    height: 550px;
+    border: 1px solid black;
 }
