--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    margin: 0;
+}
 .grid-square {
     font-size: 0;
     margin: 0;
@@ -12,6 +15,33 @@
 }
 
 .canvas {
-    display: flex;
-    height: 600px;
+    display: flex;   
+    border: 1px solid black;
+    box-shadow: 4px 5px;
 }
+
+.middle-section {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px 0px;
+}
+
+.header {
+    text-align: center;
+    background-color: rgb(60, 211, 241); 
+    padding: 30px 0px;
+    border-bottom: 2px dashed black;
+}
+
+.header h1 {
+    font-size: 50px;
+}
+
+.controles {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
